--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body,
 #app {
   --font: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
     Arial, sans-serif;
-
+  overflow: initial;
   font-family: var(--font);
   font-size: 16px;
   margin: 0;
